<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_view_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detailsProperty.DetailsPropertyView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small">

        <androidx.cardview.widget.CardView
            android:id="@+id/detail_view_card_pictures"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/details_view_slider_pictures"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_pic_slider"
                app:sliderCircularHandlerEnabled="false"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="@dimen/margin_small"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="?attr/colorSecondary"
                app:sliderIndicatorUnselectedColor="?attr/colorPrimary" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/details_view_description_title"
            style="@style/TitleRealEstateManager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_view_card_pictures" />

        <TextView
            android:id="@+id/details_view_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/n_a"
            android:textAlignment="textStart"
            android:textSize="@dimen/details_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_view_description_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_view_space_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintEnd_toStartOf="@id/details_view_other_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_view_description">

            <ImageView
                android:id="@+id/details_view_surface_icon"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                android:src="@drawable/surface_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_view_surface_title"
                style="@style/SmallTitleRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/surface"
                app:layout_constraintBottom_toBottomOf="@id/details_view_surface_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/details_view_surface_icon"
                app:layout_constraintTop_toTopOf="@id/details_view_surface_icon" />

            <TextView
                android:id="@+id/details_view_surface"
                style="@style/SmallTextRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/details_view_surface_title"
                app:layout_constraintStart_toStartOf="@id/details_view_surface_title"
                app:layout_constraintTop_toBottomOf="@id/details_view_surface_title" />

            <ImageView
                android:id="@+id/details_view_room_icon"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                android:src="@drawable/home_icon"
                app:layout_constraintStart_toStartOf="@id/details_view_surface_icon"
                app:layout_constraintTop_toBottomOf="@id/details_view_surface" />

            <TextView
                android:id="@+id/details_view_room_title"
                style="@style/SmallTitleRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_of_rooms"
                app:layout_constraintBottom_toBottomOf="@id/details_view_room_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/details_view_room_icon"
                app:layout_constraintTop_toTopOf="@id/details_view_room_icon" />

            <TextView
                android:id="@+id/details_view_rooms"
                style="@style/SmallTextRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                app:layout_constraintEnd_toEndOf="@id/details_view_room_title"
                app:layout_constraintStart_toStartOf="@id/details_view_room_title"
                app:layout_constraintTop_toBottomOf="@id/details_view_room_title" />

            <ImageView
                android:id="@+id/details_view_bath_icon"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                android:src="@drawable/bathroom_icon"
                app:layout_constraintStart_toStartOf="@id/details_view_surface_icon"
                app:layout_constraintTop_toBottomOf="@id/details_view_rooms" />

            <TextView
                android:id="@+id/details_view_bath_title"
                style="@style/SmallTitleRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_of_bathrooms"
                app:layout_constraintBottom_toBottomOf="@id/details_view_bath_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/details_view_bath_icon"
                app:layout_constraintTop_toTopOf="@id/details_view_bath_icon" />

            <TextView
                android:id="@+id/details_view_bath"
                style="@style/SmallTextRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                app:layout_constraintEnd_toEndOf="@id/details_view_bath_title"
                app:layout_constraintStart_toStartOf="@id/details_view_bath_title"
                app:layout_constraintTop_toBottomOf="@id/details_view_bath_title" />

            <ImageView
                android:id="@+id/details_view_bed_icon"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                android:src="@drawable/bed_icon"
                app:layout_constraintStart_toStartOf="@id/details_view_surface_icon"
                app:layout_constraintTop_toBottomOf="@id/details_view_bath" />

            <TextView
                android:id="@+id/details_view_bed_title"
                style="@style/SmallTitleRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_of_bedrooms"
                app:layout_constraintBottom_toBottomOf="@id/details_view_bed_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/details_view_bed_icon"
                app:layout_constraintTop_toTopOf="@id/details_view_bed_icon" />

            <TextView
                android:id="@+id/details_view_bed"
                style="@style/SmallTextRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                app:layout_constraintEnd_toEndOf="@id/details_view_bed_title"
                app:layout_constraintStart_toStartOf="@id/details_view_bed_title"
                app:layout_constraintTop_toBottomOf="@id/details_view_bed_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_view_other_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_view_space_group"
            app:layout_constraintTop_toTopOf="@id/detail_view_space_group">

            <ImageView
                android:id="@+id/detail_view_price_icon"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                android:src="@drawable/dollar_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_view_price_title"
                style="@style/SmallTitleRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                app:layout_constraintBottom_toBottomOf="@id/detail_view_price_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_view_price_icon"
                app:layout_constraintTop_toTopOf="@id/detail_view_price_icon" />

            <TextView
                android:id="@+id/detail_view_price"
                style="@style/SmallTextRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                app:layout_constraintEnd_toEndOf="@id/detail_view_price_title"
                app:layout_constraintStart_toStartOf="@id/detail_view_price_title"
                app:layout_constraintTop_toBottomOf="@id/detail_view_price_title" />

            <ImageView
                android:id="@+id/detail_view_type_icon"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                android:src="@drawable/type_icon"
                app:layout_constraintStart_toStartOf="@id/detail_view_price_icon"
                app:layout_constraintTop_toBottomOf="@id/detail_view_price" />

            <TextView
                android:id="@+id/detail_view_type_title"
                style="@style/SmallTitleRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/type"
                app:layout_constraintBottom_toBottomOf="@id/detail_view_type_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_view_type_icon"
                app:layout_constraintTop_toTopOf="@id/detail_view_type_icon" />

            <TextView
                android:id="@+id/detail_view_type"
                style="@style/SmallTextRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                app:layout_constraintEnd_toEndOf="@id/detail_view_type_title"
                app:layout_constraintStart_toStartOf="@id/detail_view_type_title"
                app:layout_constraintTop_toBottomOf="@id/detail_view_type_title" />

            <ImageView
                android:id="@+id/detail_view_near_icon"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                android:src="@drawable/near_icon"
                app:layout_constraintStart_toStartOf="@id/detail_view_price_icon"
                app:layout_constraintTop_toBottomOf="@id/detail_view_type" />

            <TextView
                android:id="@+id/detail_view_near_title"
                style="@style/SmallTitleRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/near_by"
                app:layout_constraintBottom_toBottomOf="@id/detail_view_near_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_view_near_icon"
                app:layout_constraintTop_toTopOf="@id/detail_view_near_icon" />

            <ImageView
                android:id="@+id/detail_view_amenity_one"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="@id/detail_view_near_title"
                app:layout_constraintTop_toBottomOf="@id/detail_view_near_title" />

            <ImageView
                android:id="@+id/detail_view_amenity_two"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                app:layout_constraintBottom_toBottomOf="@id/detail_view_amenity_one"
                app:layout_constraintStart_toEndOf="@id/detail_view_amenity_one"
                app:layout_constraintTop_toTopOf="@id/detail_view_amenity_one" />

            <ImageView
                android:id="@+id/detail_view_amenity_three"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                app:layout_constraintBottom_toBottomOf="@id/detail_view_amenity_one"
                app:layout_constraintStart_toEndOf="@id/detail_view_amenity_two"
                app:layout_constraintTop_toTopOf="@id/detail_view_amenity_one" />

            <ImageView
                android:id="@+id/detail_view_amenity_four"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="@id/detail_view_amenity_one"
                app:layout_constraintTop_toBottomOf="@id/detail_view_amenity_one" />

            <ImageView
                android:id="@+id/detail_view_amenity_five"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="@id/detail_view_amenity_two"
                app:layout_constraintTop_toBottomOf="@id/detail_view_amenity_two" />

            <ImageView
                android:id="@+id/detail_view_amenity_six"
                style="@style/IconDetailRealEstateManager"
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="@id/detail_view_amenity_three"
                app:layout_constraintTop_toBottomOf="@id/detail_view_amenity_three" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_view_location_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintEnd_toStartOf="@id/details_view_map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_view_space_group">

            <ImageView
                android:id="@+id/details_view_location_icon"
                android:layout_width="@dimen/icon_details_size"
                android:layout_height="@dimen/icon_details_size"
                android:src="@drawable/icon_location_sold"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_view_location_title"
                style="@style/SmallTitleRealEstateManager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                app:layout_constraintBottom_toBottomOf="@id/details_view_location_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/details_view_location_icon"
                app:layout_constraintTop_toTopOf="@id/details_view_location_icon" />

            <TextView
                android:id="@+id/details_view_location_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/details_view_location_title"
                app:layout_constraintTop_toBottomOf="@id/details_view_location_title" />

            <TextView
                android:id="@+id/details_view_location_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/details_view_location_title"
                app:layout_constraintTop_toBottomOf="@id/details_view_location_street" />

            <TextView
                android:id="@+id/details_view_location_zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/details_view_location_title"
                app:layout_constraintTop_toBottomOf="@id/details_view_location_city" />

            <TextView
                android:id="@+id/details_view_location_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/details_view_location_title"
                app:layout_constraintTop_toBottomOf="@id/details_view_location_zip" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/details_view_map"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/details_view_location_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>